--- a/section-6/multiplication/package.json
+++ b/section-6/multiplication/package.json
@@ -4,21 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "tsc": "tsc",
-    "tsc:watch": "tsc --watch",
-    "dev:nodemon": "npx nodemon",
-    "dev": "ts-node ./src/app.ts",
-    "build": "rimraf ./dist && tsc",
-    "start": "npm run build && node dist/app.js"
+    "tsc": "tsc --project tsconfig.build.json",
+    "tsc:watch": "tsc --watch --project tsconfig.build.json",
+    "dev": "npx nodemon",
+    "build": "npm run test && rimraf ./dist && tsc",
+    "start": "node dist/app.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^20.8.0",
-    "@types/yargs": "^17.0.26",
+    "@types/jest": "^29.5.5",
+    "@types/node": "^20.8.4",
+    "@types/yargs": "^17.0.28",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "rimraf": "^5.0.5",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
