--- a/section-8/noc/package.json
+++ b/section-8/noc/package.json
@@ -19,6 +19,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cron": "^3.1.1"
+    "cron": "^3.1.1",
+    "dotenv": "^16.3.1",
+    "env-var": "^7.4.1"
   }
 }
