--- a/section-8/noc/package.json
+++ b/section-8/noc/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "devDependencies": {
     "@types/node": "^20.8.6",
+    "@types/nodemailer": "^6.4.13",
     "rimraf": "^5.0.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
@@ -21,6 +22,7 @@
   "dependencies": {
     "cron": "^3.1.1",
     "dotenv": "^16.3.1",
-    "env-var": "^7.4.1"
+    "env-var": "^7.4.1",
+    "nodemailer": "^6.9.7"
   }
 }
